--- a/content/posts/2019-06-04--reduce-js-bundle-part-one/index.mdx
+++ b/content/posts/2019-06-04--reduce-js-bundle-part-one/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Reducing JS Bundle Size
+title: Reducing JS Bundle Size 1/4
 subTitle: Part One - Measurements and High Level
 date: 2019-06-04
 slug: reduce-js-bundle-part-one
