--- a/content/posts/2019-06-30--minification-and-dce/index.mdx
+++ b/content/posts/2019-06-30--minification-and-dce/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Reducing JS Bundle Size
+title: Reducing JS Bundle Size 2/4
 subTitle: Part Two - Minification and Dead Code Eliminiation
 date: 2019-06-30
 slug: reduce-js-bundle-part-two
@@ -106,7 +106,7 @@ npx terser --toplevel --mangle --mangle-props -- index.js
 
 This will give us our mangled code.
 
-```
+```javascript
 function t(t){if(t==="shirt"){return{type:"shirt",t:"$10"}}else{return{type:"pants",t:"$12"}}return{type:"hat",t:"$5"}}t("shirt");
 ```
 
