--- a/content/posts/2019-07-01--qg-optional-chaining/index.mdx
+++ b/content/posts/2019-07-01--qg-optional-chaining/index.mdx
@@ -27,7 +27,7 @@ function getUserForPhoneDirectory(person) {
   }
 }
 
-getUserForDirectory(personOne);  //expect: Denny Scott - 555-555-5555
+getUserForPhoneDirectory(personOne);  //expect: Denny Scott - 555-555-5555
 ```
 
 Now, this is obviously a somewhat convoluted example, there's no reason not to make these seperate inputs, but it's pretty common to get a set of values, and frequently test to see if those each chained property exists before performing an action on them. This happens a lot in selectors and reducers if you're not careful. And if you don't do this checking, and the passed variable is undefined, we get the all too classic error.
@@ -70,8 +70,7 @@ npm install --save-dev @babel/core @babel/cli @babel/plugin-proposal-optional-ch
 
 Great, now let's place the following code example into a new file called index.js, in our project directory.
 
-index.js
-
+**index.js**
 ```javascript
   const personOne = {
   firstName: "Denny",
@@ -92,7 +91,7 @@ function getUserForPhoneDirectory(person) {
   }
 }
 
-getUserForDirectory(personOne);  //expect: Denny Scott - 555-555-5555
+getUserForPhoneDirectory(personOne);  //expect: Denny Scott - 555-555-5555
 ```
 
 The project's all set up now, we can try running babel, along with the plugin, on our code.
@@ -121,8 +120,7 @@ So babel has taken our code and transpiled it into similar conditional checks th
 
 To add it to a Webpack project, we can add the babel plugin as we did above, and in our `.babelrc,` we add
 
-.babelrc
-
+**.babelrc**
 ```json
 {
   "plugins": [  
