Weird timing bug, attempting fix

--- a/content/posts/2019-06-30--minification-and-dce/index.mdx
+++ b/content/posts/2019-06-30--minification-and-dce/index.mdx
@@ -31,7 +31,7 @@ With the emergence of frameworks like [AngularJS](https://en.wikipedia.org/wiki/
 
 Since Javascript is a dynamic scripting language, it can lack many of the tools commonly found in static programming languages. One of these tools is the use of static analysis for [dead code elimination](https://en.wikipedia.org/wiki/Dead_code_elimination). Dead code elimination usually refers to the removal of code that is unused in our codebase. To get a better understanding of it, let's take a look at an example, and pass it through attempted to eliminate the dead code.
 
-> Note: All code examples used today are on [Github](https://github.com/DennyScott/minification-dce-blog)
+> Note: All code examples used today can be found on [Github](https://github.com/DennyScott/minification-dce-blog)
 
 ```javascript
 function selectClothes(type) {
